<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">POS Manager</string>
    <string name="action_settings">Settings</string>
    <string name="addStallHeader">Add a Stall</string>
    <string name="productCodeHint">Enter product code</string>
    <string name="submitLabel">Submit</string>
    <string name="stallCountInfo">Stall(s) entered so far.</string>
    <string name="stallDetailHeader">Stall Detail</string>
    <string name="stallNumber">Stall Number:</string>
    <string name="stallBalance">Current Balance: </string>
    <string name="editLabel">Edit</string>
    <string name="deleteLabel">Delete</string>
    <string name="resetLabel">Reset Stall Balance</string>
    <string name="stallNumberHint">Enter stall number</string>
    <string name="count">0</string>
    <string name="defaultNumber">0000</string>
    <string name="mainMenuReturn">Back to Main Menu</string>
    <string name="addStall">Add Stalls</string>
    <string name="viewStall">Edit Stall Detail</string>
    <string name="addProductTitle">Add A New Product</string>
    <string name="viewProduct">Edit Product Detail</string>
    <string name="Stall">STALLS</string>
    <string name="products">PRODUCTS</string>
    <string name="masterMenuHeader">Master Menu</string>
    <string name="clearProducts">remove all products</string>
    <string name="clearTable">remove all entries</string>
    <string name="priceHint">Enter product price</string>
    <string name="addProduct">Add  Products</string>
    <string name="productCountInfo">Product(s) entered so far.</string>
    <string name="returnHome">Return to Home Screen</string>
    <string name="slaveMenuHeader">Slave Device Setup</string>
    <string name="productMenu">Product Menu</string>
    <string name="inventoryHeader">Inventory List</string>
    <string name="basket">View Basket</string>
    <string name="slaveSetupBtn">Return to Setup Screen</string>
    <string name="product_code">CODE:</string>
    <string name="product_price">PRICE:</string>
    <string name="orderItemHeader">Order Item</string>
    <string name="quantity">QUANTITY:</string>
    <string name="checkout">View Basket</string>
    <string name="addBtn">add</string>
    <string name="clearBtn">clear</string>
    <string name="currentStallNum">Current Number:</string>
    <string name="updateBtn">Update</string>
    <string name="purchase">Purchase Products</string>
    <string name="checkoutHeader">Checkout Basket</string>
    <string name="default_IP">IP address is unconfigured</string>
    <string name="default_port">No port selected</string>
    <string name="ipHint">Enter IPv4 address</string>
    <string name="portHint">Enter a port number</string>
    <color name="black">#00000000</color>
    <color name="red">#ffff0000</color>
    <string name="editStallHeader">Edit Stall</string>
    <string name="editProductHeader">Edit Product</string>
    <string name="settingsReturn">Return to settings</string>
    <string name="stallMenu">List of stalls</string>
    <string name="currentProductCode">Current Code:</string>
    <string name="CurrentProductPrice">Current Price:</string>
    <string name="productList">List of Products</string>


</resources>
