<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/masterMenuHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="45dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stallHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stall"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/addStallBtn"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/addStall" />

        <Button
            android:id="@+id/editStallBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewStall" />

        <TextView
            android:id="@+id/productsHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addProduct" />

        <Button
            android:id="@+id/editProductBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewProduct" />
    </LinearLayout>

</RelativeLayout>