<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="482dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/slave_menu_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slaveMenuHeader"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                       android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/numberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="60dp"
                android:text="@string/currentStallNum"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="56dp"
                android:layout_toRightOf="@+id/numberLabel"
                android:text="@string/defaultNumber"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <EditText
            android:id="@+id/stall_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stallNumberHint"
            android:inputType="number" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateBtn" 
                       android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                       android:layout_marginTop="20dp"
            android:text="@string/default_IP"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/port_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_port"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ipHint"
            android:inputType="number" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/portHint"
            android:inputType="number" />

        <Button
            android:id="@+id/updateNetInfoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/updateBtn" />

        <Button
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productMenu" />

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnHome" />
    </LinearLayout>

</ScrollView>