<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/code"
        android:layout_below="@+id/code"
        android:layout_marginTop="23dp"
        android:text="@string/defaultNumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/price"
        android:layout_alignLeft="@+id/codeLabel"
        android:text="@string/CurrentProductPrice"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/codeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/price"
        android:layout_alignLeft="@+id/header"
        android:text="@string/currentProductCode"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/header"
        android:layout_below="@+id/header"
        android:layout_marginTop="31dp"
        android:text="@string/defaultNumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/settingsReturn" />

    <Button
        android:id="@+id/productList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings"
        android:layout_alignParentLeft="true"
        android:text="@string/productList" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/viewProduct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/updateCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/updateBtn" />

    <EditText
        android:id="@+id/inputCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/productCodeHint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputCode"
        android:layout_below="@+id/updateCode"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/priceHint"
        android:inputType="number" />

    <Button
        android:id="@+id/updatePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/updateCode"
        android:layout_below="@+id/inputPrice"
        android:text="@string/updateBtn" />

</RelativeLayout>
