<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/stallDetailHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/numberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edit"
        android:layout_below="@+id/header"
        android:layout_marginTop="19dp"
        android:text="@string/stallNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/balanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/numberLabel"
        android:layout_marginLeft="18dp"
        android:text="@string/stallBalance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/balanceLabel"
        android:layout_alignBottom="@+id/balanceLabel"
        android:layout_alignLeft="@+id/number"
        android:text="@string/defaultNumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numberLabel"
        android:layout_alignBottom="@+id/numberLabel"
        android:layout_toRightOf="@+id/numberLabel"
        android:text="@string/defaultNumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit"
        android:layout_centerHorizontal="true"
        android:text="@string/resetLabel" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/balanceLabel"
        android:layout_below="@+id/balanceLabel"
        android:layout_marginTop="48dp"
        android:text="@string/editLabel" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit"
        android:layout_alignBottom="@+id/edit"
        android:layout_alignLeft="@+id/balance"
        android:text="@string/deleteLabel" />

</RelativeLayout>